# zksync-era

./: .gitmodules  patch  patch2
core/lib/config/src/: testonly.rs
core/lib/config/src/configs/: contracts.rs  mod.rs  new_horizen.rs
core/lib/contracts/src/: lib.rs
core/lib/dal/: Cargo.toml
core/lib/dal/.sqlx/: query-1b5fc4834d19bbbe29038f6b41e5ec96d5d60614f705c6286216a1938dd4af7e.json  query-4b6f731c3bb5a3271b3934ba950e0d7a90c95cc6f2d42535df4e26a263272772.json  query-8cb3c9fc81a686c93bf8c2fbf07457171de4ffce0622860109b201c76548aa9c.json  query-a9a3c5c4d875af8557139a6ca92341f24b61b34e72912000351fe7364a539515.json
core/lib/dal/migrations/: 20240420173835_new_horizen_attestation.sql
core/lib/dal/src/: lib.rs  nh_dal.rs  proof_generation_dal.rs
core/lib/env_config/src/: contracts.rs  lib.rs  new_horizen.rs
core/lib/l1_contract_interface/src/i_executor/methods/: mod.rs  prove_batches.rs
core/lib/protobuf_config/src/: contracts.rs  lib.rs  new_horizen.rs
core/lib/protobuf_config/src/proto/: contracts.proto  new_horizen.proto
core/lib/types/src/l1/: error.rs  mod.rs
core/lib/zksync_core/: Cargo.toml
core/lib/zksync_core/src/: lib.rs
core/lib/zksync_core/src/eth_sender/: aggregator.rs  tests.rs
core/lib/zksync_core/src/eth_watch/: client.rs  mod.rs
core/lib/zksync_core/src/eth_watch/event_processors/: mod.rs  nh.rs
core/lib/zksync_core/src/proof_data_handler/: mod.rs  request_processor.rs
core/lib/zksync_core/src/proto/: mod.proto
core/lib/zksync_core/src/temp_config_store/: mod.rs  tests.rs
etc/env/: dev.toml
etc/env/base/: contracts.toml  new_horizen.toml
etc/nh/: metadata.scale
infrastructure/zk/src/: contract.ts  server.ts
prover/prover_fri_utils/src/: region_fetcher.rs
zkv-bin/: Cargo.toml
zkv-bin/src/: main.rs  types.rs
(+3 files in other folders)
