[package]
name = "submit_proof_to_zkv"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# cli
clap = { version = "4.5.9", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }

# subxt
subxt = { version = "0.32.1", features = ["substrate-compat"] }
subxt-signer = { version = "0.32.1", features = ["subxt"] }
tokio = { version = "1.35", features = ["macros", "time", "rt-multi-thread"] }

# zksync-era
bincode = { version = "1.3" }
serde = { version = "1" }
ethereum-types = { version = "=0.14.1" }
crypto_codegen = { package = "zksync_solidity_vk_codegen", git = "https://github.com/matter-labs/zksync-crypto.git", version = "0.29.0" }
franklin-crypto = {features = ["plonk"], git = "https://github.com/matter-labs/zksync-crypto.git", version = "0.29.0" }
